# Dump1090

./: .gitignore  Dump1090.vcxproj  LICENSE  Makefile  Makefile.Windows  README.md  TODO  TODO.md  adsbhub.org.cfg  aircraft-database-dump.bat  aircraft-database-update.bat  aircraft.c  aircraft.h  airports.c  airports.h  cfg_file.c  cfg_file.h  check-for-unused-libraries.py  csv.c  csv.h  dump1090.c  dump1090.cfg  dump1090.chm  dump1090.rc  dump1090_config.h  favicon.c  generate-setupfile.bat  gmap.html  host-deny4.cfg  host-raw.cfg  host-sbs.cfg  interactive.c  interactive.h  location.c  location.h  misc.c  misc.h  mongoose.c  mongoose.h  net_io.c  (+11 more)
.github/: FUNDING.yml  appveyor-build.bat  appveyor.yml  dump1090.cfg
.github/workflows/: cmake.yml  msbuild.yml  release.yml
src/: CMakeLists.txt  Dump1090.sln  Dump1090.vcxproj  Makefile.MinGW  Makefile.Windows  aircraft.c  aircraft.h  airports.c  airports.h  airspy.c  airspy.h  cfg_file.c  cfg_file.h  client-cert-key.h  color.c  color.h  convert.c  convert.h  cpr.c  cpr.h  crc.c  crc.h  csv.c  csv.h  demod-2000.c  demod-2000.h  demod-2400.c  demod-2400AC.c  demod-8000.c  demod.h  dump1090.c  dump1090.rc  dump1090_config.h  favicon.c  fifo.c  fifo.h  geo.c  geo.h  infile.c  infile.h  (+21 more)
tools/: SBS_client.py  debug.html  frames.js  gen_airport_codes_csv.py  gen_data.py  gen_magnitude_lut.py  gen_packed_fs.py  gen_routes_data.py  generate-setupfile.bat  packed_webfs_main.c  setup-old.py
tools/setupwiz/: Cargo.toml  README.md
tools/setupwiz/src/: main.rs
web_root/: 404.html  gmap.html  index.html
web_root-FlightAware/: README.md  config.js  dbloader.js  flags.js  formatter.js  index.html  layers.js  markers.js  planeObject.js  registrations.js  script.js  style.css
web_root-FlightAware/db/: 0.json  2.json  3.json  39.json  3C.json  4.json  40.json  400.json  401.json  406.json  42.json  43.json  44.json  48.json  484.json  49.json  4B.json  4C.json  4D.json  5.json  6.json  7.json  7C.json  7C0.json  7C1.json  7C2.json  7C3.json  7C4.json  7C6.json  7C7.json  8.json  A0.json  A00.json  A01.json  A02.json  A03.json  A04.json  A05.json  A06.json  A07.json  (+211 more)
web_root-FlightAware/db/aircraft_types/: README
web_root-FlightAware/flags-tiny/: README.txt
web_root-FlightAware/geojson/: README.md  UK_Mil_AAR_Zones.geojson  US_A2A_refueling.geojson
web_root-FlightAware/geojson/L3Harris/: Area_Labels_Brown.geojson  Area_Labels_Green.geojson  Den_Apch_Inbound_Call_Points_GPS.geojson  Den_Apch_Inbound_Call_Points_Visual.geojson  L3Harris.geojson  Pueblo_Tower_Inbound_Call_Points_Visual.geojson  Route_Name_Labels.geojson  Training_Areas_Labels.geojson  USAFA_Area_Labels.geojson
web_root-FlightAware/jquery/: README
web_root-FlightAware/noUiSlider/: CHANGELOG.MD  CONTRIBUTING.md  LICENSE.md  README.md
web_root-FlightAware/noUiSlider/distribute/: nouislider.css  nouislider.js  nouislider.min.css  nouislider.min.js
web_root-FlightAware/ol/: ol-layerswitcher.css  ol-layerswitcher.js
web_root-FlightAware/ol/v6.3.1/: ol.css  ol.js
web_root-FlightAware/test/: markers_test.html  markers_test.js
web_root-OpenLayers3/: NOTE  config.js  dbloader.js  flags.js  formatter.js  index.html  layers.js  markers.js  myMarkers.js  original-index.html  plMarkers.js  planeObject.js  registrations.js  script.js  style.css
web_root-OpenLayers3/3d/: index.html
web_root-OpenLayers3/3d/css/: style.css
web_root-OpenLayers3/3d/icons/: manifest.json
web_root-OpenLayers3/3d/js/: olcesium.js
web_root-OpenLayers3/3d/json/: airports.json  airports.json-ok
web_root-OpenLayers3/db/: 0.json  00.json  01.json  02.json  04.json  05.json  06.json  06A.json  08.json  09.json  0A.json  0B.json  0C.json  0D.json  0D0.json  0E.json  0F.json  1.json  10.json  11.json  12.json  120.json  121.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  1A.json  1B.json  1D.json  2.json  21.json  22.json  23.json  24.json  25.json  26.json  (+589 more)
web_root-OpenLayers3/flags-tiny/: README.txt
web_root-OpenLayers3/layers/: AK_range.geojson  AK_range.geojson-old  UK_ATZ.geojson  UK_AT_Areas.geojson  UK_Airspace.geojson  UK_Airways.geojson  UK_Civi_Airports.geojson  UK_Civi_Airports_named.geojson  UK_Danger_Areas.geojson  UK_MATZ-2023.geojson  UK_MATZ.geojson  UK_Mil_AAR_Zones.geojson  UK_Mil_Airfield_runways.geojson  UK_Mil_Airfield_runways_named.geojson  UK_Mil_RC.geojson  UK_Military_TACAN_Routes.geojson  UK_NavigationPoints.geojson  UK_VOR+DME+NDB+TACAN.geojson
web_root-OpenLayers3/sql/: README.md  aircraft_all_test.html  aircraft_all_test.php  aircraft_one_test.html  aircraft_one_test.php  aircraft_seen.php  aircraft_seen_all_test.html  aircraft_seen_all_test.php  aircraft_seen_one_test.html  finds_all_test.html  finds_all_test.php  index.html  range_all_test.html  range_one_test.html  range_read-old.php  range_read.php  range_read_one.php  range_update_one.php  range_update_one_3.php  sql-finds-layer.php  sql-max-range.php  sql-test-update.php  sql_server.php  sql_table_aircraft.php  sql_table_finds.php  sql_table_range.php  sql_table_seen.php
web_root-OpenLayers3/test/: extended_markers_test.html  extended_markers_test.js  markers_test.html  markers_test.js  max-range-data.json  maxRange.json  mid-range-data.json  midRange.json  min-range-data.json  minRange.json
web_root-Tar1090/: config.js  dbloader.js  defaults.js  early.js  flags.js  formatter.js  geomag2020.js  index.html  layers.js  markers.js  planeObject.js  registrations.js  script.js  style.css  tfrs.kml  upintheair.json
web_root-Tar1090/db2/: 0.js  1.js  2.js  3.js  39.js  3D.js  4.js  40.js  48.js  5.js  6.js  7.js  7C.js  8.js  9.js  A.js  A0.js  A00.js  A02.js  A03.js  A04.js  A05.js  A06.js  A08.js  A0A.js  A0B.js  A0C.js  A0E.js  A0F.js  A1.js  A12.js  A14.js  A15.js  A17.js  A18.js  A19.js  A1A.js  A1B.js  A1C.js  A1D.js  (+54 more)
web_root-Tar1090/geojson/: UK_Mil_AWACS_Orbits.geojson  UK_Mil_RC.geojson  US_ARTCC_boundaries.geojson
web_root-Tar1090/libs/: egm96-universal-1.1.0.min.js  elm-pep-01.js  jquery-ui-1.12.1.min.css  ol-6.14.1.css  ol-custom018.js  ol-layerswitcher-3.8.3.css
(+17 files in other folders)
